--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ui-mall</title>
   </head>
   <body>
-  <script src="static/js/jquery.js"></script>
+  <script src="/static/js/jquery.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
